# pytorch-cpp

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  opencv_realtime_webcam_human_segmentation.cpp  opencv_realtime_webcam_imagenet_classification.cpp  pytorch_results_deviation.cpp
src/: AvgPool2d.cpp  BasicBlock.cpp  BatchNorm2d.cpp  Bottleneck.cpp  Conv2d.cpp  Linear.cpp  MaxPool2d.cpp  Module.cpp  ReLU.cpp  ResNet.cpp  ResNet.hxx  Sequential.cpp  io.cpp  pytorch.cpp  pytorch.h
